--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
         buildConfigField "String", "OMISE_PUBLIC_KEY", omise_public_key
         buildConfigField "String", "OMISE_PASSWORD", omise_password
     }
+    //testOptions {
+    //    unitTests.returnDefaultValues = true
+    //}
     dataBinding {
         enabled = true
     }
@@ -36,6 +39,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
 
     // Snackbar
     implementation "com.google.android.material:material:1.1.0"
