--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+apply from 'omise.properties'
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
