--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,9 @@ env:
 
 script:
   - ./gradlew clean assembleDebug testDebug
+after_success:
+  # Renaming folder and files of reports so codecov.io can find it
+  - mv app/build/reports/jacoco/createDebugUnitTestCoverageReport app/build/reports/jacoco/jacocoTestDebugUnitTestReport
+  - mv app/build/reports/jacoco/jacocoTestDebugUnitTestReport/createDebugUnitTestCoverageReport.xml app/build/reports/jacoco/jacocoTestDebugUnitTestReport/jacocoTestDebugUnitTestReport.xml
+  # Codecov.io
+  - bash <(curl -s https://codecov.io/bash)
