--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,9 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
 
+    // Mockito
+    testImplementation "org.mockito:mockito-core:2.19.0"
+
     // Snackbar
     implementation "com.google.android.material:material:1.1.0"
 
